# rocketSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: index.html  package-lock.json  style.css
docs/js/: app.js  optimizer.worker.js  reactUI.js
docs/wasm/: rocket_sim.js  rocket_sim.wasm
include/core/: autopilot.hpp  environment.hpp  optimizer.hpp  rocket.hpp  simulator.hpp  vector3.hpp
include/physics/: aerodynamics.hpp  gravity.hpp
include/utils/: config.hpp  confing.hpp  logger.hpp
public/: index.html  package.json  style.css
public/js/: app.js
public/wasm/: rocket_sim.js
src/core/: autopilot.cpp  bindings.cpp  environment.cpp  optimizer.cpp  rocket.cpp  simulator.cpp  vector3.cpp
src/physics/: aerodynamics.cpp  gravity.cpp
src/utils/: logger.cpp
